# papaya

./: .gitignore  README.md  demo.py  pyproject.toml  readme.md  setup.py
datafruit/: docker-compose.yaml  dummy_models.py  sql_job.py
datafruit/job/: pyjob.py
examples/: example.py
papaya/: __init__.py  cli.py  fastapi_wrapper.py  main.py
sparklistener/: spark_monitor_api.py
tests/: test_datafruit.py  test_sql_job.py
